--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -88,6 +88,7 @@
         }
 
         .hint-good {
+            color: black !important;
             background-color: #fbc02d !important; /* Yellow for ranks 2-5 if matched */
         }
 
