--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -88,7 +88,7 @@
         }
 
         .hint-good {
-            color: black !important;
+            color: #1a1a1a;
             background-color: #fbc02d !important; /* Yellow for ranks 2-5 if matched */
         }
 
