--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -72,6 +72,7 @@
         th {
             background-color: #444;
             font-weight: bold;
+            text-align: center;
         }
 
         tr:nth-child(even) {
