--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -468,7 +468,11 @@
 
             // Info (only move)
             let info = '';
-            if (item.moves) info += `<strong>Ход:</strong> ${item.moves.map(m => `${m.from}/${m.to}${m.hit ? '*' : ''}`).join(' ')}`;
+            if (item.gnu_move) {
+                info += `<strong>Ход:</strong> ${item.gnu_move}`;
+            } else {
+                info += '<strong>Ход:</strong> Нет данных о ходе';
+            }
             document.getElementById('info').innerHTML = info;
 
             // Hints table
