--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -227,6 +227,7 @@
             }
 
             .game-info {
+                font-size: 18px;
                 padding: 2px; /* Further reduced for very small screens */
             }
         }
